# discord_workshop_update_tracker

./: .env.example  LICENSE  README.md  compose.yaml
.github/workflows/: docker-image.yml
bot/: Cargo.toml  Dockerfile
bot/src/: cron.rs  db.rs  main.rs  printer.rs  scheduler.rs  steam.rs
bot/src/commands/: actions.rs  autocomplete.rs  common.rs  mod.rs  settings.rs
bot/src/commands/actions/: add.rs  add_multiple.rs  list.rs  notes.rs  remove.rs  restart.rs  summary.rs
bot/src/commands/settings/: info.rs  register_channel.rs  set_schedule.rs
bot/src/db/: items.rs  mods.rs  servers.rs  subscriptions.rs
db/: init.sql
